--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel="stylesheet" href="styles.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      <h1>make your choise</h1>
-      <button id="rock">the rock</button>
-      <button id="scissor"> the scissor</button>
-      <button id="paper">the paper</button>
-      <button id="startGame">Start Game</button>
-      <div id="dashboard">result</div>
-      <div id="finalResult"></div>
-      <script src="game.js" type="text/javascript">
+     
+     
+      <button id="rock">rock</button>
+      <button id="paper">paper</button>
+      <button id="scissor">scissor</button>
+      <div id="result1"></div>
+      <div id="result2"></div>
+      <div id="result3"></div>
+      <script src="game.js" type="text/javascript"> 
       </script>
     </body>
   </html> 
